a few more changes

--- a/subduction_uwGeo.ipynb
+++ b/subduction_uwGeo.ipynb
@@ -7,10 +7,14 @@
     "# Thermo-mechanical subduction with UWGeodynamics\n",
     "\n",
     "Notes:\n",
+    "\n",
     "* This currently relies on the UWGeodynamics branch of UWSubduction, \n",
     "    * in this branch I've removed all references to TectonicModel\n",
     "* Q2 for Stokes, Q1 for Heat?\n",
-    "* Expose the full solver, but retain Solve"
+    "\n",
+    "* Currently solver is not converging for the composite rheology, \n",
+    "* Expose the full solver, but retain the `run_for` function\n",
+    "    * I've tried to do this but possible failed\n"
    ]
   },
   {
@@ -599,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,11 +638,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#GEO.DruckerPrager?"
+    "#Model.max"
    ]
   },
   {
@@ -650,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
